--- a/Taro/public/index.html
+++ b/Taro/public/index.html
@@ -4,13 +4,24 @@
 <head>
     <meta charset="utf-8" />
     <title>
-        Taro
+        Toys
     </title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="site.css">
 </head>
 
 <body>
+    <button type="button" id="aboutme" class="btn btn-link">Обо  мне</button>
+    <button type="button" id="product" class="btn btn-link">Игрушки</button>
+    <button type="button" id="masterclass" class="btn btn-link">Мастер-класс</button>
+    <img src="toyshook.jpg" alt="типа логотип" id="logo">
+    <button type="button" id="contacts" class="btn btn-link">Контакты</button>
+    <button type="button" id="delivery" class="btn btn-link">Как заказать</button>
+    <button type="button" id="basket" class="btn btn-link">Корзина</button>
+    
 <div id="header"></div>
-</body>
 
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
