--- a/toys.hook/public/index.html
+++ b/toys.hook/public/index.html
@@ -4,24 +4,90 @@
 <head>
     <meta charset="utf-8" />
     <title>
-        Toys
+        Toys.Hook. Игрушки ручной работы
     </title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="site.css">
 </head>
 
 <body>
-    <button type="button" id="aboutme" class="btn btn-link">Обо  мне</button>
-    <button type="button" id="product" class="btn btn-link">Игрушки</button>
-    <button type="button" id="masterclass" class="btn btn-link">Мастер-класс</button>
-    <img src="toyshook.jpg" alt="типа логотип" id="logo">
-    <button type="button" id="contacts" class="btn btn-link">Контакты</button>
-    <button type="button" id="delivery" class="btn btn-link">Как заказать</button>
-    <button type="button" id="basket" class="btn btn-link">Корзина</button>
-    
-<div id="header"></div>
+    <div id="gridHead">
+        <div><button type="button" id="aboutme" class="btn btn-link">Обо мне</button></div>
+        <div><button type="button" id="product" class="btn btn-link">Игрушки</button></div>
+        <div> <button type="button" id="masterclass" class="btn btn-link">Мастер-класс</button></div>
+        <div><img src="toyshook.jpg" alt="типа логотип" id="logo"></div>
+        <div><button type="button" id="contacts" class="btn btn-link">Контакты</button></div>
+        <div><button type="button" id="delivery" class="btn btn-link">Как заказать</button></div>
+        <div><button type="button" id="basket" class="btn btn-link">Корзина</button></div>
+    </div>
+    <div id="about-me-block"></div>
+    <div id="product-block" class="ms-3">
+        <div class="card" style="width: 15rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Типа игрушка</h5>
+                <p class="card-text">Какое-то описание</p>
+                <a href="#">Купить</a>
+            </div>
+        </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+        <div class="card" style="width: 15rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Типа игрушка</h5>
+                <p class="card-text">Какое-то описание</p>
+                <a href="#">Купить</a>
+            </div>
+        </div>
+
+        <div class="card" style="width: 15rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Типа игрушка</h5>
+                <p class="card-text">Какое-то описание</p>
+                <a href="#">Купить</a>
+            </div>
+        </div>
+
+        <div class="card" style="width: 15rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Типа игрушка</h5>
+                <p class="card-text">Какое-то описание</p>
+                <a href="#">Купить</a>
+            </div>
+        </div>
+
+        <div class="card" style="width: 15rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Типа игрушка</h5>
+                <p class="card-text">Какое-то описание</p>
+                <a href="#">Купить</a>
+            </div>
+        </div>
+
+        <div class="card" style="width: 15rem;">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Типа игрушка</h5>
+                <p class="card-text">Какое-то описание</p>
+                <a href="#">Купить</a>
+            </div>
+        </div>
+    </div>
+    <div id="delivery-block"></div>
+    <div id="masterclass-block"></div>
+    <div> <img src="line.png" alt="линия" id="line"></div>
+    <div id="footer">
+        <div><img src="toyshook.jpg" alt="типа логотип" id="footer-logo"> Toys.Hook. Игрушки, связанные с любовью</div>
+        <div id="source"><img src="https://img.icons8.com/small/32/000000/instagram-new.png"></div>
+        <div id="source"><img src="https://img.icons8.com/small/32/000000/vk-com.png"></div>
+        <div id="source"><img src="https://img.icons8.com/small/32/000000/marker.png">г.Самара</div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
