--- a/toys.hook/public/index.html
+++ b/toys.hook/public/index.html
@@ -9,6 +9,9 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="site.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -31,6 +34,29 @@
                 <a href="#">Купить</a>
             </div>
         </div>
+        <!-- Модальное окно с корзиной -->
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+            Launch static backdrop modal
+          </button>
+          
+          <!-- Modal -->
+          <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  ...
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Understood</button>
+                </div>
+              </div>
+            </div>
+          </div>
 
         <div class="card" style="width: 15rem;">
             <img src="..." class="card-img-top" alt="...">
@@ -84,7 +110,7 @@
         <div><img src="toyshook.jpg" alt="типа логотип" id="footer-logo"> Toys.Hook. Игрушки, связанные с любовью</div>
         <div id="source"><img src="https://img.icons8.com/small/32/000000/instagram-new.png"></div>
         <div id="source"><img src="https://img.icons8.com/small/32/000000/vk-com.png"></div>
-        <div id="source"><img src="https://img.icons8.com/small/32/000000/marker.png">г.Самара</div>
+        <div id="source"><img src="https://img.icons8.com/small/32/000000/marker.png">г. Самара</div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
